--- a/gst-plugins-good/po/af.po
+++ b/gst-plugins-good/po/af.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins 0.7.6\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-19 14:43+0100\n"
+"POT-Creation-Date: 2009-08-11 17:17+0100\n"
 "PO-Revision-Date: 2004-03-18 14:16+0200\n"
 "Last-Translator: Petri Jooste <rkwjpj@puk.ac.za>\n"
 "Language-Team: Afrikaans <i18n@af.org.za>\n"
@@ -34,10 +34,10 @@ msgstr "Kon nie beheertoestel \"%s\" toemaak nie."
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Geen of ongeldige klanktoevoer, AVI-stroom sal korrup wees."
 
-msgid "This file contains no playable streams."
+msgid "This file is invalid and cannot be played."
 msgstr ""
 
-msgid "This file is invalid and cannot be played."
+msgid "This file contains no playable streams."
 msgstr ""
 
 msgid "This file is incomplete and cannot be played."
@@ -237,6 +237,10 @@ msgid "Device '%s' is not a capture device."
 msgstr "Toestel \"%s\" is nie 'n vasleggingtoestel nie."
 
 #, fuzzy, c-format
+msgid "Device '%s' is not a output device."
+msgstr "Toestel \"%s\" is nie 'n vasleggingtoestel nie."
+
+#, fuzzy, c-format
 msgid "Failed to set norm for device '%s'."
 msgstr "Kon nie buffers vanaf toestel \"%s\" verkry nie."
 
@@ -272,35 +276,12 @@ msgstr "Kon nie oudio-toestel \"%s\" toemaak nie."
 msgid "Could not enqueue buffers in device '%s'."
 msgstr "Kon nie buffers vanaf toestel \"%s\" verkry nie."
 
-#, c-format
-msgid "Failed to enumerate possible video formats device '%s' can work with"
-msgstr ""
-
 #, fuzzy, c-format
 msgid "Failed trying to get video frames from device '%s'."
 msgstr "Kon nie genoeg buffers vanaf toestel \"%s\" kry nie."
 
 #, c-format
-msgid ""
-"The buffer type is not supported, or the index is out of bounds, or no "
-"buffers have been allocated yet, or the userptr or length are invalid. "
-"device %s"
-msgstr ""
-
-#, c-format
-msgid "Failed trying to get video frames from device '%s'. Not enough memory."
-msgstr ""
-
-#, c-format
-msgid "insufficient memory to enqueue a user pointer buffer. device %s."
-msgstr ""
-
-#, c-format
 msgid "Failed after %d tries. device %s. system error: %s"
-msgstr ""
-
-#, c-format
-msgid "No free buffers found in the pool at index %d."
 msgstr ""
 
 #, fuzzy, c-format
@@ -311,39 +292,11 @@ msgid "Video input device did not accept new frame rate setting."
 msgstr ""
 
 #, fuzzy, c-format
-msgid "Device '%s' does not support video capture"
-msgstr "Toestel \"%s\" is nie 'n vasleggingtoestel nie."
-
-#, fuzzy, c-format
-msgid "Device '%s' cannot capture at %dx%d"
-msgstr "Toestel \"%s\" is nie 'n vasleggingtoestel nie."
-
-#, c-format
-msgid "Device '%s' cannot capture in the specified format"
-msgstr ""
-
-#, fuzzy, c-format
-msgid "Could not get buffers from device '%s'."
-msgstr "Kon nie buffers vanaf toestel \"%s\" verkry nie."
-
-#, fuzzy, c-format
-msgid "Could not get enough buffers from device '%s'."
-msgstr "Kon nie genoeg buffers vanaf toestel \"%s\" kry nie."
-
-#, fuzzy, c-format
 msgid "Could not map buffers from device '%s'"
 msgstr "Kon nie buffers vanaf toestel \"%s\" verkry nie."
 
 #, c-format
 msgid "The driver of device '%s' does not support any known capture method."
-msgstr ""
-
-#, c-format
-msgid "Error starting streaming capture from device '%s'."
-msgstr ""
-
-#, c-format
-msgid "Error stopping streaming capture from device '%s'."
 msgstr ""
 
 msgid "Changing resolution at runtime is not yet supported."
