--- a/gst-plugins-good/po/ca.po
+++ b/gst-plugins-good/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 0.9.7\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-19 14:43+0100\n"
+"POT-Creation-Date: 2009-08-11 17:17+0100\n"
 "PO-Revision-Date: 2005-12-04 21:54+0100\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
@@ -33,10 +33,10 @@ msgstr ""
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "L'entrada d'àudio manca o és invàlida, el flux AVI serà corrupte."
 
-msgid "This file contains no playable streams."
+msgid "This file is invalid and cannot be played."
 msgstr ""
 
-msgid "This file is invalid and cannot be played."
+msgid "This file contains no playable streams."
 msgstr ""
 
 msgid "This file is incomplete and cannot be played."
@@ -234,6 +234,10 @@ msgid "Device '%s' is not a capture device."
 msgstr ""
 
 #, c-format
+msgid "Device '%s' is not a output device."
+msgstr ""
+
+#, c-format
 msgid "Failed to set norm for device '%s'."
 msgstr ""
 
@@ -270,34 +274,11 @@ msgid "Could not enqueue buffers in device '%s'."
 msgstr ""
 
 #, c-format
-msgid "Failed to enumerate possible video formats device '%s' can work with"
-msgstr ""
-
-#, c-format
 msgid "Failed trying to get video frames from device '%s'."
 msgstr ""
 
 #, c-format
-msgid ""
-"The buffer type is not supported, or the index is out of bounds, or no "
-"buffers have been allocated yet, or the userptr or length are invalid. "
-"device %s"
-msgstr ""
-
-#, c-format
-msgid "Failed trying to get video frames from device '%s'. Not enough memory."
-msgstr ""
-
-#, c-format
-msgid "insufficient memory to enqueue a user pointer buffer. device %s."
-msgstr ""
-
-#, c-format
 msgid "Failed after %d tries. device %s. system error: %s"
-msgstr ""
-
-#, c-format
-msgid "No free buffers found in the pool at index %d."
 msgstr ""
 
 #, c-format
@@ -308,39 +289,11 @@ msgid "Video input device did not accept new frame rate setting."
 msgstr ""
 
 #, c-format
-msgid "Device '%s' does not support video capture"
-msgstr ""
-
-#, c-format
-msgid "Device '%s' cannot capture at %dx%d"
-msgstr ""
-
-#, c-format
-msgid "Device '%s' cannot capture in the specified format"
-msgstr ""
-
-#, c-format
-msgid "Could not get buffers from device '%s'."
-msgstr ""
-
-#, c-format
-msgid "Could not get enough buffers from device '%s'."
-msgstr ""
-
-#, c-format
 msgid "Could not map buffers from device '%s'"
 msgstr ""
 
 #, c-format
 msgid "The driver of device '%s' does not support any known capture method."
-msgstr ""
-
-#, c-format
-msgid "Error starting streaming capture from device '%s'."
-msgstr ""
-
-#, c-format
-msgid "Error stopping streaming capture from device '%s'."
 msgstr ""
 
 msgid "Changing resolution at runtime is not yet supported."
