--- a/gst-plugins-good/po/ja.po
+++ b/gst-plugins-good/po/ja.po
@@ -1,68 +1,78 @@
 # Japanese translation for gst-plugins-good.
+# This file is put in the public domain.
 #
 # Takao Fujiwara <takao.fujiwara@sun.com>, 2006.
+# Makoto Kato <makoto.kt@gmail.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good HEAD\n"
+"Project-Id-Version: gst-plugins-good 0.10.14.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-19 14:43+0100\n"
-"PO-Revision-Date: 2006-08-08 19:05+0200\n"
-"Last-Translator: Takao Fujiwara <takao.fujiwara@sun.com>\n"
+"POT-Creation-Date: 2009-08-11 17:17+0100\n"
+"PO-Revision-Date: 2009-06-01 19:29+0900\n"
+"Last-Translator: Makoto Kato <makoto.kt@gmail.com>\n"
 "Language-Team: Japanese <translation-team-ja@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 0.3\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Could not establish connection to sound server"
-msgstr ""
+msgstr "サウンドサーバーへの接続に失敗しました"
 
 msgid "Failed to query sound server capabilities"
-msgstr ""
+msgstr "サウンドサーバーのケイパビリティのクエリーに失敗しました"
 
 msgid "Internal data stream error."
-msgstr ""
+msgstr "内部データストリームエラー"
 
 msgid "Failed to decode JPEG image"
-msgstr ""
+msgstr "JPEG画像のデコードに失敗しました"
 
 msgid "Could not connect to server"
-msgstr ""
+msgstr "サーバーへ接続できません"
 
 # SUN REVIEWED
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "入力オーディオが存在しないか無効であるため、AVI ストリームは壊れます。"
 
-msgid "This file contains no playable streams."
-msgstr ""
-
 msgid "This file is invalid and cannot be played."
-msgstr ""
+msgstr "このファイルは不正なため再生することができません"
+
+msgid "This file contains no playable streams."
+msgstr "このファイルには再生不可能なストリームが含まれています"
 
 msgid "This file is incomplete and cannot be played."
-msgstr ""
+msgstr "このファイルは正常ではないため、再生することができません"
 
 msgid "The video in this file might not play correctly."
-msgstr ""
+msgstr "このファイルの中の動画は正しく再生できないかもしれません"
 
 #, c-format
 msgid "This file contains too many streams. Only playing first %d"
 msgstr ""
+"このファイルには多くのストリームが格納されているため、最初の %d 個のみ再生し"
+"ます"
 
 msgid "This file is corrupt and cannot be played."
-msgstr ""
+msgstr "このファイルは壊れているため再生することができません"
 
 msgid ""
 "No supported stream was found. You might need to install a GStreamer RTSP "
 "extension plugin for Real media streams."
 msgstr ""
+"サポートしているストリームが見つかりません。Real メディアストリームのための"
+"GStreamer RTSP 拡張プラグインをインストールする必要があるかもしれません。"
 
 msgid ""
 "No supported stream was found. You might be missing the right GStreamer RTSP "
 "extension plugin."
 msgstr ""
+"サポートしているストリームが見つかりません。正しい GStreamer RTSP 拡張プラグ"
+"インをインストールする必要があるかもしれません。"
 
 msgid "Internal data flow error."
-msgstr ""
+msgstr "内部データフローエラー"
 
 # SUN REVIEWED
 msgid "Volume"
@@ -88,9 +98,8 @@ msgstr "PCM"
 msgid "Speaker"
 msgstr "スピーカ"
 
-# SUN REVIEWED
 msgid "Line-in"
-msgstr "ラインイン"
+msgstr "ライン入力"
 
 # SUN REVIEWED
 msgid "Microphone"
@@ -168,26 +177,30 @@ msgid ""
 "Could not open audio device for playback. Device is being used by another "
 "application."
 msgstr ""
+"再生用にオーディオデバイスを開くことができませんでした。デバイスが他のアプリ"
+"ケーションで利用されています"
 
 msgid ""
 "Could not open audio device for playback. You don't have permission to open "
 "the device."
 msgstr ""
+"再生用にオーディオデバイスを開くことができませんでした。デバイスを開くための"
+"権限がありません。"
 
 # SUN REVIEWED
-#, fuzzy
 msgid "Could not open audio device for playback."
-msgstr "CD デバイスを読み取り用に開くことができません。"
+msgstr "音声デバイスを読み取り用に開くことができません。"
 
 msgid ""
 "Could not open audio device for recording. You don't have permission to open "
 "the device."
 msgstr ""
+"録音用にオーディオデバイスを開くことができませんでした。デバイスを開くための"
+"権限がありません。"
 
 # SUN REVIEWED
-#, fuzzy
 msgid "Could not open audio device for recording."
-msgstr "CD デバイスを読み取り用に開くことができません。"
+msgstr "音声デバイスを録音用に開くことができません。"
 
 # SUN REVIEWED
 msgid "Gain"
@@ -213,32 +226,33 @@ msgstr ""
 msgid "AUX 2 Out"
 msgstr ""
 
-# SUN REVIEWED
-#, fuzzy, c-format
+#, c-format
 msgid "Error reading %d bytes from device '%s'."
-msgstr "CD デバイスを読み取り用に開くことができません。"
+msgstr "デバイス %2$s から　%1$d バイト読み込み時にエラーが発生しました。"
 
 #, c-format
 msgid "Got unexpected frame size of %u instead of %u."
-msgstr ""
+msgstr "予期しないフレームサイズ (%2$u ではなく %1$u) を取得しました。"
 
 #, c-format
 msgid "Error reading %d bytes on device '%s'."
-msgstr ""
+msgstr "デバイス '%2$s' 上で %1$d バイトの読み込み時ににエラーが発生しました。"
 
 #, c-format
 msgid ""
 "Error getting capabilities for device '%s': It isn't a v4l2 driver. Check if "
 "it is a v4l1 driver."
 msgstr ""
+"デバイス '%s' ケイパビリティの取得時にエラーが発生しました: v412 ドライバでは"
+"ありません。もし v411 ドライバであれば、チェックしてください。"
 
 #, c-format
 msgid "Failed to query attributes of input %d in device %s"
-msgstr ""
+msgstr "デバイス %2$s 内の入力 %1$d の属性のクエリーに失敗しました"
 
 #, c-format
 msgid "Failed to get setting of tuner %d on device '%s'."
-msgstr ""
+msgstr "デバイス '%2$s' 上のチューナー %1$d の設定の取得に失敗しました。"
 
 #, c-format
 msgid "Failed to query norm on device '%s'."
@@ -246,7 +260,7 @@ msgstr ""
 
 #, c-format
 msgid "Failed getting controls attributes on device '%s'."
-msgstr ""
+msgstr "デバイス '%s' のコントロール属性の取得に失敗しました"
 
 #, c-format
 msgid "Cannot identify device '%s'."
@@ -254,16 +268,20 @@ msgstr ""
 
 #, c-format
 msgid "This isn't a device '%s'."
-msgstr ""
+msgstr "これはデバイス '%s' ではありません"
 
 # SUN REVIEWED
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open device '%s' for reading and writing."
-msgstr "CD デバイスを読み取り用に開くことができません。"
+msgstr "デバイス '%s' を読み取り用と書き込み用に開くことができません"
 
 #, c-format
 msgid "Device '%s' is not a capture device."
-msgstr ""
+msgstr "デバイス '%s' はキャプチャデバイスではありません"
+
+#, fuzzy, c-format
+msgid "Device '%s' is not a output device."
+msgstr "デバイス '%s' はキャプチャデバイスではありません"
 
 #, c-format
 msgid "Failed to set norm for device '%s'."
@@ -271,11 +289,11 @@ msgstr ""
 
 #, c-format
 msgid "Failed to get current tuner frequency for device '%s'."
-msgstr ""
+msgstr "デバイス '%s' の現在のチューナーの周波数の取得に失敗しました"
 
 #, c-format
 msgid "Failed to set current tuner frequency for device '%s' to %lu Hz."
-msgstr ""
+msgstr "デバイス '%s' のチューナーの周波数の %lu Hz への設定に失敗しました"
 
 #, c-format
 msgid "Failed to get signal strength for device '%s'."
@@ -283,15 +301,19 @@ msgstr ""
 
 #, c-format
 msgid "Failed to get value for control %d on device '%s'."
-msgstr ""
+msgstr "デバイス '%2$s' 上のコントロール %1$d の値の取得に失敗しました。"
 
 #, c-format
 msgid "Failed to set value %d for control %d on device '%s'."
 msgstr ""
+"デバイス '%3$s' 上のコントロール %2$d の値を %1$d へ設定することに失敗しまし"
+"た。"
 
 #, c-format
 msgid "Failed to get current input on device '%s'. May be it is a radio device"
 msgstr ""
+"デバイス '%s' 上の現在の入力の取得に失敗しました。ラジオデバイスかもしれませ"
+"ん"
 
 #, c-format
 msgid "Failed to set input %d on device %s."
@@ -302,86 +324,61 @@ msgid "Could not enqueue buffers in device '%s'."
 msgstr ""
 
 #, c-format
-msgid "Failed to enumerate possible video formats device '%s' can work with"
-msgstr ""
-
-#, c-format
 msgid "Failed trying to get video frames from device '%s'."
-msgstr ""
-
-#, c-format
-msgid ""
-"The buffer type is not supported, or the index is out of bounds, or no "
-"buffers have been allocated yet, or the userptr or length are invalid. "
-"device %s"
-msgstr ""
-
-#, c-format
-msgid "Failed trying to get video frames from device '%s'. Not enough memory."
-msgstr ""
-
-#, c-format
-msgid "insufficient memory to enqueue a user pointer buffer. device %s."
-msgstr ""
+msgstr "デバイス '%s' からビデオフレームの取得に失敗しました。"
 
 #, c-format
 msgid "Failed after %d tries. device %s. system error: %s"
-msgstr ""
-
-#, c-format
-msgid "No free buffers found in the pool at index %d."
-msgstr ""
+msgstr "%d 回リトライしましたが失敗しました。デバイス %s。システムエラー: %s"
 
 # SUN REVIEWED
-#, fuzzy, c-format
+#, c-format
 msgid "Could not get parameters on device '%s'"
-msgstr "CD デバイスを読み取り用に開くことができません。"
+msgstr "デバイス '%s' 上のパラメータを取得できません。"
 
 msgid "Video input device did not accept new frame rate setting."
-msgstr ""
+msgstr "ビデオ入力デバイスは新しいフレームレート設定にすることができません"
 
 #, c-format
-msgid "Device '%s' does not support video capture"
-msgstr ""
-
-#, c-format
-msgid "Device '%s' cannot capture at %dx%d"
-msgstr ""
-
-#, c-format
-msgid "Device '%s' cannot capture in the specified format"
-msgstr ""
-
-#, c-format
-msgid "Could not get buffers from device '%s'."
-msgstr ""
-
-#, c-format
-msgid "Could not get enough buffers from device '%s'."
-msgstr ""
-
-# SUN REVIEWED
-#, fuzzy, c-format
 msgid "Could not map buffers from device '%s'"
-msgstr "CD デバイスを読み取り用に開くことができません。"
+msgstr "デバイス '%s' からバッファをマップできません。"
 
 #, c-format
 msgid "The driver of device '%s' does not support any known capture method."
 msgstr ""
-
-#, c-format
-msgid "Error starting streaming capture from device '%s'."
-msgstr ""
-
-#, c-format
-msgid "Error stopping streaming capture from device '%s'."
-msgstr ""
+"デバイス '%s' のドライバーはよく知られたキャプチャーメソッドをサポートしてい"
+"ません"
 
 msgid "Changing resolution at runtime is not yet supported."
 msgstr ""
 
 msgid "Cannot operate without a clock"
 msgstr ""
+
+#~ msgid ""
+#~ "Failed trying to get video frames from device '%s'. Not enough memory."
+#~ msgstr ""
+#~ "デバイス '%s' からビデオフレームを取得しようとしましたが失敗しました。メモ"
+#~ "リが十分にありません。"
+
+#~ msgid "No free buffers found in the pool at index %d."
+#~ msgstr "インデックス %d でプール内に空きバッファがありません。"
+
+#~ msgid "Device '%s' does not support video capture"
+#~ msgstr "デバイス '%s' はビデオキャプチャをサポートしていません"
+
+#~ msgid "Device '%s' cannot capture at %dx%d"
+#~ msgstr "デバイス '%s' は %dx%d でキャプチャできません"
+
+#~ msgid "Device '%s' cannot capture in the specified format"
+#~ msgstr "デバイス '%s' は指定されたフォーマットでキャプチャできません"
+
+#~ msgid "Could not get buffers from device '%s'."
+#~ msgstr "デバイス '%s' からバッファを取得できませんでした。"
+
+#~ msgid "Could not get enough buffers from device '%s'."
+#~ msgstr ""
+#~ "デバイス '%s' から十分なバッファー領域を取得することができませんでした"
 
 # SUN REVIEWED
 #, fuzzy
@@ -480,3 +477,6 @@ msgstr ""
 #, fuzzy
 #~ msgid "description for default GStreamer audiosrc"
 #~ msgstr "デフォルトの GStreamer オーディオソース"
+
+#~ msgid "Failed getting controls attributes on device '%s.'"
+#~ msgstr "デバイス '%s' のコントロール属性の取得に失敗しました"
