--- a/gst-plugins-good/po/lt.po
+++ b/gst-plugins-good/po/lt.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good-0.10.7.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-19 14:43+0100\n"
+"POT-Creation-Date: 2009-08-11 17:17+0100\n"
 "PO-Revision-Date: 2008-07-09 13:37+0300\n"
 "Last-Translator: Gintautas Miliauskas <gintas@akl.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
@@ -34,12 +34,12 @@ msgstr "Nepavyko prisijungti prie serverio"
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Nėra arba netaisyklingas audio, AVI srautas bus sugadintas."
 
-msgid "This file contains no playable streams."
-msgstr "Šiame faile nėra srautų, kuriuos būtų galima groti."
-
 #, fuzzy
 msgid "This file is invalid and cannot be played."
 msgstr "Failas neužbaigtas ir negali būti pagrotas."
+
+msgid "This file contains no playable streams."
+msgstr "Šiame faile nėra srautų, kuriuos būtų galima groti."
 
 msgid "This file is incomplete and cannot be played."
 msgstr "Failas neužbaigtas ir negali būti pagrotas."
@@ -237,6 +237,10 @@ msgstr ""
 msgid "Device '%s' is not a capture device."
 msgstr "Įrenginys „%s“ nėra įrašymo įrenginys."
 
+#, fuzzy, c-format
+msgid "Device '%s' is not a output device."
+msgstr "Įrenginys „%s“ nėra įrašymo įrenginys."
+
 #, c-format
 msgid "Failed to set norm for device '%s'."
 msgstr ""
@@ -274,34 +278,11 @@ msgid "Could not enqueue buffers in device '%s'."
 msgstr ""
 
 #, c-format
-msgid "Failed to enumerate possible video formats device '%s' can work with"
-msgstr ""
-
-#, c-format
 msgid "Failed trying to get video frames from device '%s'."
 msgstr ""
 
 #, c-format
-msgid ""
-"The buffer type is not supported, or the index is out of bounds, or no "
-"buffers have been allocated yet, or the userptr or length are invalid. "
-"device %s"
-msgstr ""
-
-#, c-format
-msgid "Failed trying to get video frames from device '%s'. Not enough memory."
-msgstr ""
-
-#, c-format
-msgid "insufficient memory to enqueue a user pointer buffer. device %s."
-msgstr ""
-
-#, c-format
 msgid "Failed after %d tries. device %s. system error: %s"
-msgstr ""
-
-#, c-format
-msgid "No free buffers found in the pool at index %d."
 msgstr ""
 
 #, c-format
@@ -312,40 +293,12 @@ msgid "Video input device did not accept new frame rate setting."
 msgstr ""
 
 #, c-format
-msgid "Device '%s' does not support video capture"
-msgstr ""
-
-#, c-format
-msgid "Device '%s' cannot capture at %dx%d"
-msgstr ""
-
-#, c-format
-msgid "Device '%s' cannot capture in the specified format"
-msgstr ""
-
-#, c-format
-msgid "Could not get buffers from device '%s'."
-msgstr ""
-
-#, c-format
-msgid "Could not get enough buffers from device '%s'."
-msgstr ""
-
-#, c-format
 msgid "Could not map buffers from device '%s'"
 msgstr ""
 
 #, c-format
 msgid "The driver of device '%s' does not support any known capture method."
 msgstr "Įrenginio „%s“ tvarkyklė nepalaiko jokio žinomo įrašymo metodo."
-
-#, c-format
-msgid "Error starting streaming capture from device '%s'."
-msgstr ""
-
-#, c-format
-msgid "Error stopping streaming capture from device '%s'."
-msgstr ""
 
 msgid "Changing resolution at runtime is not yet supported."
 msgstr ""
