--- a/gst-plugins-good/po/zh_HK.po
+++ b/gst-plugins-good/po/zh_HK.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good-0.10.2 0.10.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-06-19 14:43+0100\n"
+"POT-Creation-Date: 2009-08-11 17:17+0100\n"
 "PO-Revision-Date: 2006-08-29 01:08+0800\n"
 "Last-Translator: Abel Cheung <abelcheung@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <community@linuxhall.org>\n"
@@ -32,10 +32,10 @@ msgstr ""
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "沒有任何輸入的音效資料或者資料無效，表示 AVI 串流出現錯誤。"
 
-msgid "This file contains no playable streams."
+msgid "This file is invalid and cannot be played."
 msgstr ""
 
-msgid "This file is invalid and cannot be played."
+msgid "This file contains no playable streams."
 msgstr ""
 
 msgid "This file is incomplete and cannot be played."
@@ -233,6 +233,10 @@ msgid "Device '%s' is not a capture device."
 msgstr ""
 
 #, c-format
+msgid "Device '%s' is not a output device."
+msgstr ""
+
+#, c-format
 msgid "Failed to set norm for device '%s'."
 msgstr ""
 
@@ -269,34 +273,11 @@ msgid "Could not enqueue buffers in device '%s'."
 msgstr ""
 
 #, c-format
-msgid "Failed to enumerate possible video formats device '%s' can work with"
-msgstr ""
-
-#, c-format
 msgid "Failed trying to get video frames from device '%s'."
 msgstr ""
 
 #, c-format
-msgid ""
-"The buffer type is not supported, or the index is out of bounds, or no "
-"buffers have been allocated yet, or the userptr or length are invalid. "
-"device %s"
-msgstr ""
-
-#, c-format
-msgid "Failed trying to get video frames from device '%s'. Not enough memory."
-msgstr ""
-
-#, c-format
-msgid "insufficient memory to enqueue a user pointer buffer. device %s."
-msgstr ""
-
-#, c-format
 msgid "Failed after %d tries. device %s. system error: %s"
-msgstr ""
-
-#, c-format
-msgid "No free buffers found in the pool at index %d."
 msgstr ""
 
 #, c-format
@@ -307,39 +288,11 @@ msgid "Video input device did not accept new frame rate setting."
 msgstr ""
 
 #, c-format
-msgid "Device '%s' does not support video capture"
-msgstr ""
-
-#, c-format
-msgid "Device '%s' cannot capture at %dx%d"
-msgstr ""
-
-#, c-format
-msgid "Device '%s' cannot capture in the specified format"
-msgstr ""
-
-#, c-format
-msgid "Could not get buffers from device '%s'."
-msgstr ""
-
-#, c-format
-msgid "Could not get enough buffers from device '%s'."
-msgstr ""
-
-#, c-format
 msgid "Could not map buffers from device '%s'"
 msgstr ""
 
 #, c-format
 msgid "The driver of device '%s' does not support any known capture method."
-msgstr ""
-
-#, c-format
-msgid "Error starting streaming capture from device '%s'."
-msgstr ""
-
-#, c-format
-msgid "Error stopping streaming capture from device '%s'."
 msgstr ""
 
 msgid "Changing resolution at runtime is not yet supported."
